--- a/4.10/4.10.csproj
+++ b/4.10/4.10.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{4FD85535-71A2-4EDA-A336-C6885FEABED6}</ProjectGuid>
+    <ProjectGuid>{5F2B3F40-F581-4969-887C-3D6669353807}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>_3._16</RootNamespace>
-    <AssemblyName>3.16</AssemblyName>
+    <RootNamespace>_4._10</RootNamespace>
+    <AssemblyName>4.10</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,7 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="3.18.cs" />
+    <Compile Include="GradeBook.cs" />
+    <Compile Include="GradeBookTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
